--- a/style.css
+++ b/style.css
@@ -772,18 +772,36 @@ body{
     
     }
 
-
-    .contenido4{
-        flex-direction: column;
-        align-items: center;
+    .cuarto-contenedor {
         flex-wrap: wrap;
+    }
+    .texto-inicial4{
+        width: 100%;
+    }
+    .contenido4{
+        align-items: center;
         gap:1rem;
         display: flex;
         padding: 0;
+        width: 80%;
+        margin: 10%;
     }
     .box{
-        width: 50vw;
+        margin: 0% 5%;
+        width: 35%;
     }
+
+    /* .box {
+        background-color: #2c2c2c;
+        border-radius: 8px;
+        overflow: hidden;
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+        transition: transform 0.3s;
+    } */
+
     .frase{
         font-size: 1rem;
     }
